# SpaceImac

./: CMakeLists.txt  README.md
app/assets/: door.mtl
app/include/: camera.h  common.h  renderer.h  scene.h  solarsystem.h  spaceelement.h  spacimac.h
app/shaders/: 3D.vs.glsl  light.fs.glsl  light.vs.glsl  normals.fs.glsl  skybox.fs.glsl  skybox.vs.glsl  textureandlight.fs.glsl
app/src/: camera.cpp  main.cpp  renderer.cpp  scene.cpp  solarsystem.cpp  spaceelement.cpp  spacimac.cpp
doc/: Doxyfile
doc/html/: annotated.html  camera_8cpp.html  camera_8cpp_source.html  camera_8h.html  camera_8h_source.html  class_base_camera-members.html  class_base_camera.html  class_light_renderer-members.html  class_light_renderer.html  class_orbital_camera-members.html  class_orbital_camera.html  class_renderer-members.html  class_renderer.html  class_satellite-members.html  class_satellite.html  class_scene-members.html  class_scene.html  class_skybox_renderer-members.html  class_skybox_renderer.html  class_solar_system-members.html  class_solar_system.html  class_spac_imac-members.html  class_spac_imac.html  class_space_element-members.html  class_space_element.html  class_star-members.html  class_star.html  class_target_camera-members.html  class_target_camera.html  class_texture_and_light_renderer-members.html  class_texture_and_light_renderer.html  classes.html  common_8h.html  common_8h_source.html  dir_78f5ecd95a37a67589a284a718a0be9c.html  dir_a8f641299cfea9f7461c2df1141b7786.html  dir_d422163b96683743ed3963d4aac17747.html  files.html  functions.html  functions_enum.html  (+52 more)
(+66 files in other folders)
